--- a/design/default/generate/templates/base.html.j2
+++ b/design/default/generate/templates/base.html.j2
@@ -31,7 +31,7 @@
 {%- endif -%}
 {%- endmacro -%}
 <!DOCTYPE html>
-<html>
+<html lang="{{ this.culture.code}}">
     <head>
 {%- block head -%}
         <meta charset = "UTF-8">
