Add copy  support to data tables.

--- a/design/default/generate/documents/static/styles/_screen_layout_section_article.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_section_article.scss
@@ -32,6 +32,8 @@ div.source-code-outer {
 
         > ol {
             > li {
+                user-select: all;
+
                 &::marker {
                     color: config.$color-gray-3;
                 }
