--- a/design/default/generate/documents/static/styles/_screen_layout.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout.scss
@@ -46,17 +46,16 @@ body {
     }
 }
 
-@media only screen and (min-width: config.$body__responsive_threshold) {
+@media only screen and (min-width: config.$body__responsive_threshold_small) {
     body[data-has-lside="yes"] {
         grid-template-columns: #{config.$layout__lside_width}rem auto;
-        grid-template-rows: auto auto auto 3rem;
+        grid-template-rows: auto auto auto auto;
 
         > header {
             grid-column-start: 1;
             grid-column-end: span 2;
             grid-row-start: 1;
             grid-row-end: span 1;
-
         }
 
         > aside {
@@ -87,7 +86,7 @@ body {
 
     body[data-has-lside="no"] {
         grid-template-columns: auto;
-        grid-template-rows: auto auto 3rem;
+        grid-template-rows: auto auto auto;
 
         > header {
             grid-column-start: 1;
