--- a/design/default/generate/documents/static/styles/_screen_layout_article_section.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_article_section.scss
@@ -164,6 +164,8 @@ div.data-table-outer {
     div.data-table-inner {
         background-color: config.$color-white-1;
         border: config.$common__border_width solid config.$color-gray-3;
+        max-width: calc(100vw - 4rem);
+        overflow-x: scroll;
 
         table.data-table {
             width: 100%;
@@ -282,7 +284,7 @@ div.data-table-outer {
     }
 }
 
-@media only screen and (min-width: config.$body__responsive_threshold) {
+@media only screen and (min-width: config.$body__responsive_threshold_small) {
     div.source-code-outer {
         > div.source-code-inner {
             max-width: calc(100vw - #{config.$layout__lside_width + config.$layout__rside_width + 3}rem);
